--- a/index.html
+++ b/index.html
@@ -94,11 +94,9 @@
    	</div> <!-- /intro-content -->
 
    	<ul class="intro-social">
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.facebook.com/jl.lai.14"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://github.com/JaredLai"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.instagram.com/jaredlai_/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->
 
    </section> <!-- /intro -->
@@ -997,11 +995,9 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.facebook.com/jl.lai.14"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://github.com/JaredLai"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://www.instagram.com/jaredlai_/"><i class="fa fa-instagram"></i></a></li>
 			   </ul>
 
 	      </div>
