Done with intro

--- a/index.html
+++ b/index.html
@@ -116,39 +116,50 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">
+					<div class="col-nine tab-full">
+					<blockquote>
+						<span >It is not enough to be busy. <br>The question is: what are we busy about?</span>
+						<cite>Henry David Thoreau</cite>
+					</blockquote>
+					</div>
+				</p>
    			</div>
 
    		</div>
    	</div> <!-- /section-intro -->
 
    	<div class="row about-content">
-
+		
    		<div class="col-six tab-full">
-
+			<!-- <div class = "profile-pic">
+				<img src="images/profile-pic.jpg" alt="Profile Picture">
+			</div> -->
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>I'm an aspiring computer engineer looking to become a full-stack developer. I've been focused on expanding my knowledge of
+				   of both computer hardware and software, taking advantage of various resources online and working on projects in my free time. 
+			   </p>
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Jared Lai</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>April 16, 2001</span>
    				</li>
    				<li>
-   					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<strong>Major:</strong>
+   					<span>Computer Engineering, sophomore</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>https://jaredlai.github.io/JaredResume/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>jairael@uci.edu</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -158,29 +169,29 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>My programming experience spans across several languages and applications</p>
 
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>Python</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<strong>C</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Arduino/Embedded Systems</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<div class="progress percent75"><span>75%</span></div>
+				   	<strong>HTML5 and CSS</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<div class="progress percent99"><span>99%</span></div>
+				   	<strong>Barista Skills</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
@@ -616,7 +627,7 @@
 
 	<!-- CTA Section
    ================================================== -->
-	<section id="cta" class="grey-section">
+	<!-- <section id="cta" class="grey-section">
 
    	<div class="row cta-content">
 
@@ -627,7 +638,7 @@
 		      <p class="lead">
 		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
+				
 				</p>
 
 				<div class="action">
@@ -636,9 +647,9 @@
 
    		</div>
 
-   	</div> <!-- /cta-content -->
+   	</div>
 
-   </section> <!-- /cta -->
+   </section>  -->
 
 
 	<!-- services Section
@@ -882,7 +893,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Just send an email and I will respond as soon as possible.</p>
 
    		</div>
    	</div> <!-- /section-intro -->
