Finished skills section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				   	<strong>C</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<div class="progress percent80"><span>85%</span></div>
 				   	<strong>Arduino/Embedded Systems</strong>
 				   </li>
 				   <li>
@@ -189,7 +189,10 @@
 				   	<strong>HTML5 and CSS</strong>
 				   </li>
 				   <li>
-
+					   <div class = "progress percent90"><span>90</span></div>
+					   <strong>Java(<a href =" https://www.credly.com/badges/974ddbd9-49fc-4447-8393-913b71e509f1/public_url">OCA Certified, Java SE 8</a>) </strong>
+					   
+				   <li>
 				   	<div class="progress percent99"><span>99%</span></div>
 				   	<strong>Barista Skills</strong>
 				   </li>
@@ -893,57 +896,12 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Just send an email and I will respond as soon as possible.</p>
+   			<p class="lead">I will respond as soon as possible.</p>
 
    		</div>
    	</div> <!-- /section-intro -->
 
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	               </div>
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">
-            </div>
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-
-   	</div> <!-- /contact-form -->
+   	
 
    	<div class="row contact-info">
 
@@ -953,12 +911,10 @@
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>Where to find me</h5>
+   			<h5>Location</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            Irvine, CA
             </p>
 
    		</div>
@@ -971,8 +927,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com
+   			<p>jairael@uci.edu<br>
+			   	jl.jared.jl@gmail.com
 			   </p>
 
    		</div>
@@ -985,9 +941,9 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+   			<p>Mobile: (805) 807 3168<br>
+			   	<!-- Mobile: (+63) 555 0100<br>
+			     	Fax: (+63) 555 0101 -->
 			   </p>
 
    		</div>
