--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent80"><span>85%</span></div>
-				   	<strong>Arduino/Embedded Systems</strong>
+				   	<strong>Embedded Systems</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
