--- a/index.html
+++ b/index.html
@@ -223,7 +223,11 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">
+				   Applying my knowledge has always been an emphais for myself.
+				   As a second year student, I've just begun my journey. 
+				   Here is a look at what I have accomplished so far.
+			   </p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -243,17 +247,20 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+						<i class="fa fa-terminal"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Web Developer and Teaching Assistant</h3>
+	   					<p>April 2021 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Little Green House English Academy</h4>
+	   					<p>In charge of creating a website for a summer camp. Registered a domain name, designed the website, 
+							   and added support for Facebook Pixel. Launched advertisements on Google Ads and Facebook.
+							   Also tutored and led activities for 30 kids as a TA for ESL classes. 
+						   </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -261,22 +268,25 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+						<i class="fa fa-coffee"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Barista</h3>
+	   					<p>October 2020 - March 2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Zhan Lu Coffee</h4>
+	   					<p>Worked part time in a busy cafe. Managed stock and inventory, with routine checks for freshness and quality control.
+							   Prepared desserts and sandwitches, and made approximately 140 drinks per day. 
+							   Also worked as a waiter and helped customers pick coffees that best suit their taste profile. 
+						   </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
+	   			<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
@@ -290,7 +300,7 @@
 	   				<div class="timeline-content">
 	   					<h4>Great Designs Studio</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   				</div> -->
 
 	   			</div> <!-- /timeline-block -->
 
@@ -315,17 +325,19 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+						<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Computer Engineering Sophmore</h3>
+	   					<p>October 2019 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>University of California, Irvine</h4>
+	   					<p>Current sophomore as a Computer Engineering major. Also taking courses for an Information and Computer Science Minor.
+							   Have taken courses and gained extensive understanding of Python and C, with working knowledge of VHDL and Assembly.
+						   </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -333,22 +345,24 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-code"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Oracle Certified Associate, Java SE 8 Programmer</h3>
+	   					<p>June 2019 - August 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Whizlabs</h4>
+	   					<p>Self taught Java SE 8 through online courses purchased through Whizlabs. Laid a strong foundation for OOP and 
+							   learned the intricacies of the Java programming language. Passed the <a href = "https://www.credly.com/badges/974ddbd9-49fc-4447-8393-913b71e509f1/public_url">Oracle Certified Associate</a> certification test. 
+						   </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
+	   			<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
@@ -362,7 +376,7 @@
 	   				<div class="timeline-content">
 	   					<h4>Design College</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   				</div> -->
 
 	   			</div> <!-- /timeline-block -->
 
