Added OCA cert link

--- a/index.html
+++ b/index.html
@@ -356,7 +356,9 @@
 	   				<div class="timeline-content">
 	   					<h4>Whizlabs</h4>
 	   					<p>Self taught Java SE 8 through online courses purchased through Whizlabs. Laid a strong foundation for OOP and 
-							   learned the intricacies of the Java programming language. Passed the <a href = "https://www.credly.com/badges/974ddbd9-49fc-4447-8393-913b71e509f1/public_url">Oracle Certified Associate</a> certification test. 
+							   learned the intricacies of the Java programming language. Passed the Oracle Certified Associate certification test. 
+							   <a href = "https://www.credly.com/badges/974ddbd9-49fc-4447-8393-913b71e509f1/public_url" target="_blank" rel="noopener noreferrer">
+								Click to view my certification badge.</a>  
 						   </p>
 	   				</div>
 
