--- a/index.html
+++ b/index.html
@@ -580,12 +580,12 @@
 								Having all different aspects of the quadacopter work together seamlessly was our main challenge. Despite the many setbacks, I was able to experience the intricacies of completing a complicated project and learned to excel as a closely knit team. 
 								
 								</p>
-							<div class="categories">Web Design</div>
+							<div class="categories">Embedded Systems</div>
 						</div>
 
 						<div class="link-box">
 							
-							<a href="#" class="popup-modal-dismiss">Close</a>
+							<a href="#" style="width:100%" class="popup-modal-dismiss" >Close</a>
 						</div>
 
 					</div> <!-- /modal-02 -->
