--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-				<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+				<a href="resume v6.pdf" title="Download Resume" download="JaredLaiResume.pdf" class="button button-primary">Download Resume</a>
 			</div>
 		</div>
 
